# iot-data-stream-utils

./: .gitignore  LICENSE.md  README.md
iot_zmq_publishers/: LICENSE.md  README.md  pyproject.toml  requirements.txt
iot_zmq_publishers/devices/BNO055/: BNO055.md  calibrate_BNO055.py  zmq_BNO055.py
iot_zmq_publishers/iot_zmq_publishers/: __init__.py
iot_zmq_publishers/iot_zmq_publishers/abstract/: __init__.py
iot_zmq_publishers/publisher-scripts/: max31865_zmq_NEEDS_UPDATE.py
legacy/iot-zmq-subscribers/: README.md  package.json
legacy/iot-zmq-subscribers/config/: handlers.json
legacy/iot-zmq-subscribers/examples/: README.md  config.json
legacy/iot-zmq-subscribers/src/: ZMQObserver.js  cli.js  constants.js  date-fns.js  pm2-jsonWriter.js  pm2.js  show-cli.js  utils.js
legacy/iot-zmq-subscribers/test/: date-fns.test.js
legacy/iot-zmq-subscribers/test-scripts/: consoleLogger.test.js  ecosystem.config.cjs  jsonWriter.test.js  readConfig.test.js
legacy/iot_zmq_publishers/: README.md  pyproject.toml
legacy/iot_zmq_publishers/examples/: local_json_stream.py
nodejs-pm2-subscribers/: README.md  ecosystem.config.cjs  package-lock.json  package.json  run-util.sh
nodejs-pm2-subscribers/configs/: example-zeromq.config.js  zeromq.config.cjs  zeromq.config.js
nodejs-pm2-subscribers/src/: ZMQObserver.js
nodejs-pm2-subscribers/src/handlers/: csvWriter.js  jsonWriter.js
nodejs-pm2-subscribers/src/pm2/: csvWriterHarness.js  jsonWriterHarness.js
rpi-scripts/: device-info.sh  post-setup.sh  rpi-setup.sh
(+6 files in other folders)
