[tool.poetry]
name = "iot_zmq_publishers"
version = "0.0.3"
description = "Scripts for streaming data from IoT devices."
authors = ["jason a. grafft <j@grafft.co>"]
license = "ISC"
packages = [
    { include = "iot_zmq_publishers" }
]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-bno055 = "^5.3.4"
pyzmq = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
